src/test/deca/syntax/invalid/intermediaire2/elseif/04elsenoif.deca
{
    if (3 < 2) {
        print("Trop petit !");
    } else ( 2 > 1 ) {
        print("Trop grand !");
    }
}